--- a/app/src/main/res/layout/navibar.xml
+++ b/app/src/main/res/layout/navibar.xml
@@ -12,7 +12,7 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         app:itemIconTint="@color/PrimaryColor"
         app:itemRippleColor="@color/white"
-        app:itemTextColor="@color/black"
+        app:labelVisibilityMode="unlabeled"
         app:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
