--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,19 +2,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/home"
-        android:icon="@drawable/homeicon"/>
-       <!-- android:title="@string/menu_title_home"-->
+        android:icon="@drawable/homeicon"
+        android:enabled="true"
+        android:title="홈화면"/>
+        <!--android:title="@string/menu_title_home"-->
 
     <item android:id="@+id/chatList"
-        android:icon="@drawable/chaticon"/>
+        android:icon="@drawable/chaticon"
+        android:enabled="true"
+        android:checked="true"
+        android:title="채팅"/>
         <!--android:title="@string/menu_title_chating"-->
 
     <item android:id="@+id/map"
-        android:icon="@drawable/mapicon"/>
+        android:icon="@drawable/mapicon"
+        android:enabled="true"
+        android:title="지도"/>
         <!--android:title="@string/menu_title_map"-->
 
     <item android:id="@+id/myPage"
-        android:icon="@drawable/mypageicon"/>
+        android:icon="@drawable/mypageicon"
+        android:enabled="true"
+        android:title="마이페이지"/>
         <!--android:title="@string/menu_title_myInfo"-->
 
 </menu>
