--- a/app/src/main/res/layout/navibar.xml
+++ b/app/src/main/res/layout/navibar.xml
@@ -19,12 +19,14 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:itemIconTint="@color/PrimaryColor"
+        android:layout_gravity="bottom"
         app:itemRippleColor="@color/white"
-        app:labelVisibilityMode="unlabeled"
+        app:itemIconTint="@color/bottom_navi"
+        app:itemTextColor="@color/bottom_navi"
         app:backgroundTint="@color/white"
+        app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
