--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -7,6 +7,9 @@
     android:background="#034Ea2"
     tools:context=".splash">
 
+    
+    <!-- 색깔은 1362bb   -->
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
