--- a/app/src/main/res/layout/float_action_button.xml
+++ b/app/src/main/res/layout/float_action_button.xml
@@ -11,27 +11,28 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
-        android:backgroundTint="@android:color/holo_orange_dark"
+        android:backgroundTint="@color/PrimaryColor"
         android:clickable="true"
         android:foregroundGravity="center"
         android:visibility="invisible"
-        app:fabCustomSize="50dp"
+        app:fabSize="normal"
         app:layout_constraintBottom_toTopOf="@+id/fab_add"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/action_icon_share"
+        app:srcCompat="@drawable/writebutton1"
         app:tint="@android:color/white" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="80dp"
-        android:backgroundTint="@android:color/holo_orange_dark"
+        android:backgroundTint="@color/PrimaryColor"
         android:clickable="true"
+        app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_add"
+        app:srcCompat="@drawable/writebutton1"
         app:tint="@android:color/white" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -40,13 +41,13 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
-        android:backgroundTint="@android:color/holo_orange_dark"
+        android:backgroundTint="@color/PrimaryColor"
         android:clickable="true"
         android:visibility="invisible"
-        app:fabCustomSize="50dp"
+        app:fabSize="normal"
         app:layout_constraintBottom_toTopOf="@+id/fab_joongo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/app_icon_splash"
+        app:srcCompat="@drawable/writebutton1"
         app:tint="@android:color/white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
