--- a/app/src/main/res/drawable/locationbutton.xml
+++ b/app/src/main/res/drawable/locationbutton.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="10dp"
-    android:shape="rectangle" >
-    <solid android:color="#c4c4c4" />
+    android:shape="rectangle">
+
+    <size android:width="300dp"/>
+    <size android:height="40dp"/>
+    <solid android:color="#1362bb" />
 
 </shape>
